@@ -18,13 +18,7 @@ DATABASES = {
 
 HOST   = 'http://127.0.0.1'
 
-QUOTAHOLDER_URL = HOST + ':8008/quotaholder/v'
-QUOTAHOLDER_TOKEN = 'token'
-
 ASTAKOS_URL = HOST + ':8000/astakos/api/authenticate'
 ASTAKOS_BASEURL = HOST + ':8000/'
 ASTAKOS_IM_MODULES = ['local']
 ASTAKOS_RECAPTCHA_ENABLED = False
-
-ASTAKOS_QUOTAHOLDER_URL = HOST + ':8008/quotaholder/v'
-ASTAKOS_QUOTAHOLDER_TOKEN = 'token'
