@@ -102,21 +102,6 @@
 #ASTAKOS_PROJECT_SUSPENSION_SUBJECT = '%s project suspended (%%(name)s)' % SITENAME
 #ASTAKOS_PROJECT_MEMBERSHIP_CHANGE_SUBJECT = '%s project membership changed (%%(name)s)' % SITENAME
 
-# Set the quotaholder component URI and token
-#ASTAKOS_QUOTAHOLDER_URL = ''
-#ASTAKOS_QUOTAHOLDER_TOKEN = ''
-#
-# Tune the size of the quotaholder http client connection pool.
-# This limits the number of concurrent requests to quotaholder.
-# If quotaholder is installed in the same system as astakos,
-# This must be at most half the synnefo_poolsize for the django database
-#ASTAKOS_QUOTAHOLDER_POOLSIZE = 50
-
-# Setup quotaholder URL and token when snf-quotaholder-app is installed
-# in the same server as astakos (recommended)
-#QUOTAHOLDER_URL = ''
-#QUOTAHOLDER_TOKEN = ''
-
 # Set the cloud service properties
 #ASTAKOS_SERVICES = {
 #    'cyclades': {
